--- a/main.ipynb
+++ b/main.ipynb
@@ -156,6 +156,185 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 30,
+   "id": "b287fc63",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "fatal: destination path 'ACE_plus' already exists and is not an empty directory.\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%bash\n",
+    "cd /workspace/dtback\n",
+    "git clone https://github.com/ali-vilab/ACE_plus.git\n",
+    "cd ACE_plus\n",
+    "# pip install -r requirements.txt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "8406de52",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "env: FLUX_FILL_PATH=hf://black-forest-labs/FLUX.1-Fill-dev\n",
+      "env: PORTRAIT_MODEL_PATH=hf://ali-vilab/ACE_Plus@portrait/comfyui_portrait_lora64.safetensors\n",
+      "env: SUBJECT_MODEL_PATH=hf://ali-vilab/ACE_Plus@subject/comfyui_subject_lora16.safetensors\n",
+      "env: LOCAL_MODEL_PATH=hf://ali-vilab/ACE_Plus@local_editing/comfyui_local_lora16.safetensors\n",
+      "hf://black-forest-labs/FLUX.1-Fill-dev\n"
+     ]
+    }
+   ],
+   "source": [
+    "%env FLUX_FILL_PATH=hf://black-forest-labs/FLUX.1-Fill-dev\n",
+    "%env PORTRAIT_MODEL_PATH=hf://ali-vilab/ACE_Plus@portrait/comfyui_portrait_lora64.safetensors        \n",
+    "%env SUBJECT_MODEL_PATH=hf://ali-vilab/ACE_Plus@subject/comfyui_subject_lora16.safetensors        \n",
+    "%env LOCAL_MODEL_PATH=hf://ali-vilab/ACE_Plus@local_editing/comfyui_local_lora16.safetensors\n",
+    "!echo \"${FLUX_FILL_PATH}\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 98,
+   "id": "0272bac8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/workspace/dtback/ACE_plus\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "scepter [INFO] 2025-03-01 04:35:44,092 [File: import_utils.py Function: <module> at line 92]  PyTorch version 2.6.0 Found.\n",
+      "scepter.ast [INFO] 2025-03-01 04:35:46,816 [File: ast_utils.py Function: load_index at line 479]  Building ast index from scanning every file!\n",
+      "scepter.ast [INFO] 2025-03-01 04:35:46,817 [File: ast_utils.py Function: get_files_scan_results at line 443]  AST-Scanning the path \"/usr/local/lib/python3.10/dist-packages/scepter\" with the following sub folders ['modules', 'studio', 'tools', 'workflow']\n",
+      "scepter.ast [INFO] 2025-03-01 04:35:47,319 [File: ast_utils.py Function: get_files_scan_results at line 465]  Scanning done! A number of 247 components indexed or updated! Time consumed 0.5024032592773438s\n",
+      "[Info]: File None does not exist!\n",
+      "[Warning]: Cfg file is None or doesn't exist, Skip loading config from [None].\n",
+      "[Info]: Loading config from [./config/ace_plus_diffusers_infer.yaml] as yaml file.\n",
+      "[Info]: Loading config from [./models/model_zoo.yaml] as yaml file.\n",
+      "Fetching 28 files: 100%|█████████████████████| 28/28 [00:00<00:00, 69946.70it/s]\n",
+      "Loading pipeline components...:   0%|                     | 0/7 [00:00<?, ?it/s]You set `add_prefix_space`. The tokenizer needs to be converted from the slow tokenizers\n",
+      "Loading pipeline components...:  29%|███▋         | 2/7 [00:00<00:01,  3.58it/s]\n",
+      "Loading checkpoint shards:   0%|                          | 0/2 [00:00<?, ?it/s]\u001b[A\n",
+      "Loading checkpoint shards:  50%|█████████         | 1/2 [00:00<00:00,  6.04it/s]\u001b[A\n",
+      "Loading checkpoint shards: 100%|██████████████████| 2/2 [00:00<00:00,  5.62it/s]\u001b[A\n",
+      "Loading pipeline components...: 100%|█████████████| 7/7 [00:01<00:00,  5.85it/s]\n",
+      "100%|███████████████████████████████████████████| 30/30 [00:17<00:00,  1.75it/s]\n",
+      "/workspace/dtback/imgs/out.jpg 2374415824\n",
+      "/workspace/dtback/ACE_plus\n"
+     ]
+    }
+   ],
+   "source": [
+    "%cd /workspace/dtback/ACE_plus\n",
+    "!sed -i 's/SAMPLE_STEPS: 28/SAMPLE_STEPS: 30/' ./config/ace_plus_diffusers_infer.yaml\n",
+    "!sed -i 's/assert cfg.args.task_type.upper() in task_model_cfg//g' infer.py\n",
+    "\n",
+    "dir = \"/workspace/dtback/imgs\"\n",
+    "!mkdir -p {dir}\n",
+    "\n",
+    "instruction = \"\"\"\n",
+    "Keep face absolutely the same.\n",
+    "Fullbody photo of the girl on top of a building wearing green jacket\n",
+    "\"\"\".replace(\"'\", \"\")\n",
+    "\n",
+    "!python3 infer.py --input_reference_image {dir}/reference.jpg --seed 42 --save_path {dir}/out.jpg --instruction '{instruction}' --output_h 1024 --output_w 1024 \\\n",
+    "    --repainting_scale 1 --task_type portrait --cfg_folder ./config --infer_type diffusers\n",
+    "\n",
+    "%cd /workspace/dtback/ACE_plus\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3f7c083e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "import json\n",
+    "\n",
+    "j = json.loads(\"\"\"{\n",
+    "  \"MODEL\": {\n",
+    "    \"PORTRAIT\": {\n",
+    "      \"MODEL_PATH\": \"hf://ali-vilab/ACE_Plus@portrait/comfyui_portrait_lora64.safetensors\"\n",
+    "    },\n",
+    "    \"SUBJECT\": {\n",
+    "      \"MODEL_PATH\": \"hf://ali-vilab/ACE_Plus@subject/comfyui_subject_lora16.safetensors\"\n",
+    "    },\n",
+    "    \"LOCAL_EDITING\": {\n",
+    "      \"MODEL_PATH\": \"hf://ali-vilab/ACE_Plus@local_editing/comfyui_local_lora16.safetensors\",\n",
+    "      \"REPAINTING_SCALE\": 0.5,\n",
+    "      \"PREPROCESSOR\": [\n",
+    "        {\n",
+    "          \"NAME\": \"CannyAnnotator\",\n",
+    "          \"TYPE\": \"canny_repainting\",\n",
+    "          \"LOW_THRESHOLD\": 100,\n",
+    "          \"HIGH_THRESHOLD\": 200\n",
+    "        },\n",
+    "        {\n",
+    "          \"NAME\": \"ColorAnnotator\",\n",
+    "          \"TYPE\": \"mosaic_repainting\",\n",
+    "          \"RATIO\": 64\n",
+    "        },\n",
+    "        {\n",
+    "          \"NAME\": \"InfoDrawContourAnnotator\",\n",
+    "          \"TYPE\": \"contour_repainting\",\n",
+    "          \"INPUT_NC\": 3,\n",
+    "          \"OUTPUT_NC\": 1,\n",
+    "          \"N_RESIDUAL_BLOCKS\": 3,\n",
+    "          \"SIGMOID\": true,\n",
+    "          \"PRETRAINED_MODEL\": \"ms://iic/scepter_annotator@annotator/ckpts/informative_drawing_contour_style.pth\"\n",
+    "        },\n",
+    "        {\n",
+    "          \"NAME\": \"MidasDetector\",\n",
+    "          \"PRETRAINED_MODEL\": \"ms://iic/scepter_annotator@annotator/ckpts/dpt_hybrid-midas-501f0c75.pt\",\n",
+    "          \"TYPE\": \"depth_repainting\"\n",
+    "        },\n",
+    "        {\n",
+    "          \"NAME\": \"GrayAnnotator\",\n",
+    "          \"TYPE\": \"recolorizing\"\n",
+    "        }\n",
+    "      ]\n",
+    "    }\n",
+    "  },\n",
+    "  \"ENV\": {\n",
+    "    \"SEED\": 2023,\n",
+    "    \"USE_PL\": false,\n",
+    "    \"BACKEND\": \"nccl\",\n",
+    "    \"SYNC_BN\": false,\n",
+    "    \"CUDNN_DETERMINISTIC\": true,\n",
+    "    \"CUDNN_BENCHMARK\": false\n",
+    "  }\n",
+    "}\"\"\")\n",
+    "\n",
+    "print(\"PORTRAIT\" in j)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "id": "63a9d4b5-62ac-40ba-82e7-1c57aaf789c5",
    "metadata": {
@@ -301,9 +480,9 @@
     "git clone -b sd3 https://github.com/kohya-ss/sd-scripts.git\n",
     "cd sd-scripts\n",
     "pip install --upgrade -r requirements.txt\n",
-    "mkdir loras\n",
+    "mkdir -p loras\n",
     "rm -rf dataset\n",
-    "mkdir dataset\n",
+    "mkdir -p dataset\n",
     "cd dataset\n",
     "# cp /workspace/dtback/base.png ./base.png\n",
     "# curl -O https://i.ibb.co/dwccwKCZ/watson.png # 1024\n",
@@ -589,7 +768,7 @@
    "outputs": [],
    "source": [
     "# !rm -rf ~/.cache/huggingface\n",
-    "# !rm -rf mongo_persistence && mkdir mongo_persistence"
+    "# !rm -rf mongo_persistence && mkdir -p mongo_persistence"
    ]
   },
   {
@@ -821,7 +1000,7 @@
     "# !rm cmake-3.31.4-linux-x86_64.sh\n",
     "# !cmake --version\n",
     "\n",
-    "# !mkdir ~/stable-diffusion.cpp/build\n",
+    "# !mkdir -p ~/stable-diffusion.cpp/build\n",
     "# %cd ~/stable-diffusion.cpp/build\n",
     "# !cmake .. -DSD_CUDA=ON\n",
     "# !cmake --build . --config Release\n",
@@ -986,7 +1165,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
