--- a/main.ipynb
+++ b/main.ipynb
@@ -68,7 +68,7 @@
     "!pip install numpy torch\n",
     "!pip install flash-attn --no-build-isolation\n",
     "!pip install transformers accelerate optimum auto-gptq huggingface-hub huggingface_hub[hf_transfer] pickleshare safetensors \\\n",
-    "                pymongo json5 diffusers protobuf peft hf_transfer supabase --upgrade\n",
+    "                pymongo json5 diffusers protobuf peft hf_transfer supabase pytorch_lightning --upgrade\n",
     "\n",
     "!pip install xformers \"xfuser[diffusers,flash-attn]\""
    ]
@@ -156,18 +156,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "id": "b287fc63",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "fatal: destination path 'ACE_plus' already exists and is not an empty directory.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%bash\n",
     "cd /workspace/dtback\n",
@@ -178,68 +170,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": null,
    "id": "8406de52",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "env: FLUX_FILL_PATH=hf://black-forest-labs/FLUX.1-Fill-dev\n",
-      "env: PORTRAIT_MODEL_PATH=hf://ali-vilab/ACE_Plus@portrait/comfyui_portrait_lora64.safetensors\n",
-      "env: SUBJECT_MODEL_PATH=hf://ali-vilab/ACE_Plus@subject/comfyui_subject_lora16.safetensors\n",
-      "env: LOCAL_MODEL_PATH=hf://ali-vilab/ACE_Plus@local_editing/comfyui_local_lora16.safetensors\n",
-      "hf://black-forest-labs/FLUX.1-Fill-dev\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%env FLUX_FILL_PATH=hf://black-forest-labs/FLUX.1-Fill-dev\n",
     "%env PORTRAIT_MODEL_PATH=hf://ali-vilab/ACE_Plus@portrait/comfyui_portrait_lora64.safetensors        \n",
     "%env SUBJECT_MODEL_PATH=hf://ali-vilab/ACE_Plus@subject/comfyui_subject_lora16.safetensors        \n",
-    "%env LOCAL_MODEL_PATH=hf://ali-vilab/ACE_Plus@local_editing/comfyui_local_lora16.safetensors\n",
-    "!echo \"${FLUX_FILL_PATH}\""
+    "%env LOCAL_MODEL_PATH=hf://ali-vilab/ACE_Plus@local_editing/comfyui_local_lora16.safetensors"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": null,
+   "id": "8f1ab7a8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%cd /workspace/dtback/ACE_plus\n",
+    "\n",
+    "%env FLUX_FILL_PATH=hf://black-forest-labs/FLUX.1-Fill-dev\n",
+    "%env ACE_PLUS_FFT_MODEL=hf://ali-vilab/ACE_Plus@ace_plus_fft.safetensors\n",
+    "!python3 infer_fft.py\n",
+    "%cd /workspace/dtback"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "290c5fdb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!ls /root/.cache/huggingface/hub/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "28b600eb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%cd /workspace/dtback/ACE_plus\n",
+    "\n",
+    "%env FLUX_FILL_PATH=hf://black-forest-labs/FLUX.1-Fill-dev\n",
+    "%env ACE_PLUS_FFT_MODEL=hf://ali-vilab/ACE_Plus@ace_plus_fft.safetensors\n",
+    "\n",
+    "!cp ./cache/4ff436e7d731294c1aa5a0487168c08b/models--ali-vilab--ACE_Plus/blobs/6d5498ed99c795a578c947ac7f02c3e944709a92803ed3d445f53af900b53d3c \\\n",
+    "./cache/b4ff6bc7d3d7be22d6ab9853bbe2fb58/._____temp/iic/ACE_Plus/ace_plus_fft.safetensors\n",
+    "%env ACE_PLUS_FFT_MODEL=ms://iic/ACE_Plus@ace_plus_fft.safetensors\n",
+    "\n",
+    "!python3 infer_fft.py\n",
+    "%cd /workspace/dtback"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "0272bac8",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/workspace/dtback/ACE_plus\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "scepter [INFO] 2025-03-01 04:35:44,092 [File: import_utils.py Function: <module> at line 92]  PyTorch version 2.6.0 Found.\n",
-      "scepter.ast [INFO] 2025-03-01 04:35:46,816 [File: ast_utils.py Function: load_index at line 479]  Building ast index from scanning every file!\n",
-      "scepter.ast [INFO] 2025-03-01 04:35:46,817 [File: ast_utils.py Function: get_files_scan_results at line 443]  AST-Scanning the path \"/usr/local/lib/python3.10/dist-packages/scepter\" with the following sub folders ['modules', 'studio', 'tools', 'workflow']\n",
-      "scepter.ast [INFO] 2025-03-01 04:35:47,319 [File: ast_utils.py Function: get_files_scan_results at line 465]  Scanning done! A number of 247 components indexed or updated! Time consumed 0.5024032592773438s\n",
-      "[Info]: File None does not exist!\n",
-      "[Warning]: Cfg file is None or doesn't exist, Skip loading config from [None].\n",
-      "[Info]: Loading config from [./config/ace_plus_diffusers_infer.yaml] as yaml file.\n",
-      "[Info]: Loading config from [./models/model_zoo.yaml] as yaml file.\n",
-      "Fetching 28 files: 100%|█████████████████████| 28/28 [00:00<00:00, 69946.70it/s]\n",
-      "Loading pipeline components...:   0%|                     | 0/7 [00:00<?, ?it/s]You set `add_prefix_space`. The tokenizer needs to be converted from the slow tokenizers\n",
-      "Loading pipeline components...:  29%|███▋         | 2/7 [00:00<00:01,  3.58it/s]\n",
-      "Loading checkpoint shards:   0%|                          | 0/2 [00:00<?, ?it/s]\u001b[A\n",
-      "Loading checkpoint shards:  50%|█████████         | 1/2 [00:00<00:00,  6.04it/s]\u001b[A\n",
-      "Loading checkpoint shards: 100%|██████████████████| 2/2 [00:00<00:00,  5.62it/s]\u001b[A\n",
-      "Loading pipeline components...: 100%|█████████████| 7/7 [00:01<00:00,  5.85it/s]\n",
-      "100%|███████████████████████████████████████████| 30/30 [00:17<00:00,  1.75it/s]\n",
-      "/workspace/dtback/imgs/out.jpg 2374415824\n",
-      "/workspace/dtback/ACE_plus\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%cd /workspace/dtback/ACE_plus\n",
     "!sed -i 's/SAMPLE_STEPS: 28/SAMPLE_STEPS: 30/' ./config/ace_plus_diffusers_infer.yaml\n",
@@ -256,7 +248,7 @@
     "!python3 infer.py --input_reference_image {dir}/reference.jpg --seed 42 --save_path {dir}/out.jpg --instruction '{instruction}' --output_h 1024 --output_w 1024 \\\n",
     "    --repainting_scale 1 --task_type portrait --cfg_folder ./config --infer_type diffusers\n",
     "\n",
-    "%cd /workspace/dtback/ACE_plus\n"
+    "%cd /workspace/dtback"
    ]
   },
   {
@@ -264,15 +256,7 @@
    "execution_count": null,
    "id": "3f7c083e",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "True\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import json\n",
     "\n",
