--- a/main.ipynb
+++ b/main.ipynb
@@ -199,30 +199,118 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "290c5fdb",
+   "id": "3dd8f66e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "!ls /root/.cache/huggingface/hub/"
+    "%cd /workspace/dtback/ACE_plus\n",
+    "%env FLUX_FILL_PATH=hf://black-forest-labs/FLUX.1-Fill-dev\n",
+    "%env ACE_PLUS_FFT_MODEL=hf://ali-vilab/ACE_Plus@ace_plus_fft.safetensors\n",
+    "\n",
+    "import argparse, importlib, io, os, sys\n",
+    "\n",
+    "from PIL import Image\n",
+    "from scepter.modules.transform.io import pillow_convert\n",
+    "from scepter.modules.utils.config import Config\n",
+    "from scepter.modules.utils.file_system import FS\n",
+    "\n",
+    "if os.path.exists('__init__.py'):\n",
+    "    package_name = 'scepter_ext'\n",
+    "    spec = importlib.util.spec_from_file_location(package_name, '__init__.py')\n",
+    "    package = importlib.util.module_from_spec(spec)\n",
+    "    sys.modules[package_name] = package\n",
+    "    spec.loader.exec_module(package)\n",
+    "\n",
+    "from inference.registry import INFERENCES\n",
+    "fs_list = [\n",
+    "    Config(cfg_dict={\"NAME\": \"HuggingfaceFs\", \"TEMP_DIR\": \"./cache\"}, load=False),\n",
+    "    Config(cfg_dict={\"NAME\": \"ModelscopeFs\", \"TEMP_DIR\": \"./cache\"}, load=False),\n",
+    "    Config(cfg_dict={\"NAME\": \"HttpFs\", \"TEMP_DIR\": \"./cache\"}, load=False),\n",
+    "    Config(cfg_dict={\"NAME\": \"LocalFs\", \"TEMP_DIR\": \"./cache\"}, load=False),\n",
+    "]\n",
+    "\n",
+    "for one_fs in fs_list:\n",
+    "    FS.init_fs_client(one_fs)\n",
+    "\n",
+    "\n",
+    "def run_one_case(pipe,\n",
+    "                input_image = None,\n",
+    "                input_mask = None,\n",
+    "                input_reference_image = None,\n",
+    "                save_path = \"examples/output/example.png\",\n",
+    "                instruction = \"\",\n",
+    "                output_h = 1024,\n",
+    "                output_w = 1024,\n",
+    "                seed = -1,\n",
+    "                sample_steps = None,\n",
+    "                guide_scale = None,\n",
+    "                repainting_scale = None,\n",
+    "                use_change=True,\n",
+    "                keep_pixels=True,\n",
+    "                keep_pixels_rate=0.8,\n",
+    "                **kwargs):\n",
+    "    if input_image is not None:\n",
+    "        input_image = Image.open(io.BytesIO(FS.get_object(input_image)))\n",
+    "        input_image = pillow_convert(input_image, \"RGB\")\n",
+    "    if input_mask is not None:\n",
+    "        input_mask = Image.open(io.BytesIO(FS.get_object(input_mask)))\n",
+    "        input_mask = pillow_convert(input_mask, \"L\")\n",
+    "    if input_reference_image is not None:\n",
+    "        input_reference_image = Image.open(io.BytesIO(FS.get_object(input_reference_image)))\n",
+    "        input_reference_image = pillow_convert(input_reference_image, \"RGB\")\n",
+    "    print(repainting_scale)\n",
+    "    image, _, _, _, seed = pipe(\n",
+    "        reference_image=input_reference_image,\n",
+    "        edit_image=input_image,\n",
+    "        edit_mask=input_mask,\n",
+    "        prompt=instruction,\n",
+    "        output_height=output_h,\n",
+    "        output_width=output_w,\n",
+    "        sampler='flow_euler',\n",
+    "        sample_steps=sample_steps or pipe.input.get(\"sample_steps\", 30),\n",
+    "        guide_scale=guide_scale or pipe.input.get(\"guide_scale\", 50),\n",
+    "        seed=seed,\n",
+    "        repainting_scale=repainting_scale,\n",
+    "        use_change=use_change,\n",
+    "        keep_pixels=keep_pixels,\n",
+    "        keep_pixels_rate=keep_pixels_rate\n",
+    "    )\n",
+    "    with FS.put_to(save_path) as local_path:\n",
+    "        image.save(local_path)\n",
+    "    return local_path, seed\n",
+    "\n",
+    "\n",
+    "model_cfg = Config(load=True, cfg_file=\"config/ace_plus_fft.yaml\")\n",
+    "pipe = INFERENCES.build(model_cfg)\n",
+    "params = {\n",
+    "    \"output_h\": 1024,\n",
+    "    \"output_w\": 1024,\n",
+    "    \"sample_steps\": 30,\n",
+    "    \"guide_scale\": None,\n",
+    "}\n",
+    "def run():\n",
+    "    module_name = \"examples.examples\"\n",
+    "    if module_name in sys.modules:\n",
+    "        del sys.modules[module_name]\n",
+    "    mod = importlib.import_module(module_name)\n",
+    "    all_examples = mod.fft_examples\n",
+    "    importlib.reload(mod)\n",
+    "    for example in all_examples:\n",
+    "        example.update(params)\n",
+    "        local_path, seed = run_one_case(pipe, **example)\n",
+    "\n",
+    "%cd /workspace/dtback"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "28b600eb",
+   "id": "978b5ec3",
    "metadata": {},
    "outputs": [],
    "source": [
     "%cd /workspace/dtback/ACE_plus\n",
-    "\n",
-    "%env FLUX_FILL_PATH=hf://black-forest-labs/FLUX.1-Fill-dev\n",
-    "%env ACE_PLUS_FFT_MODEL=hf://ali-vilab/ACE_Plus@ace_plus_fft.safetensors\n",
-    "\n",
-    "!cp ./cache/4ff436e7d731294c1aa5a0487168c08b/models--ali-vilab--ACE_Plus/blobs/6d5498ed99c795a578c947ac7f02c3e944709a92803ed3d445f53af900b53d3c \\\n",
-    "./cache/b4ff6bc7d3d7be22d6ab9853bbe2fb58/._____temp/iic/ACE_Plus/ace_plus_fft.safetensors\n",
-    "%env ACE_PLUS_FFT_MODEL=ms://iic/ACE_Plus@ace_plus_fft.safetensors\n",
-    "\n",
-    "!python3 infer_fft.py\n",
+    "run()\n",
     "%cd /workspace/dtback"
    ]
   },
@@ -233,20 +321,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "%env FLUX_FILL_PATH=hf://black-forest-labs/FLUX.1-Fill-dev\n",
+    "%env PORTRAIT_MODEL_PATH=hf://ali-vilab/ACE_Plus@portrait/comfyui_portrait_lora64.safetensors        \n",
+    "%env SUBJECT_MODEL_PATH=hf://ali-vilab/ACE_Plus@subject/comfyui_subject_lora16.safetensors        \n",
+    "%env LOCAL_MODEL_PATH=hf://ali-vilab/ACE_Plus@local_editing/comfyui_local_lora16.safetensors\n",
     "%cd /workspace/dtback/ACE_plus\n",
     "!sed -i 's/SAMPLE_STEPS: 28/SAMPLE_STEPS: 30/' ./config/ace_plus_diffusers_infer.yaml\n",
-    "!sed -i 's/assert cfg.args.task_type.upper() in task_model_cfg//g' infer.py\n",
+    "!sed -i 's/assert cfg.args.task_type.upper() in task_model_cfg//g' infer_lora.py\n",
     "\n",
-    "dir = \"/workspace/dtback/imgs\"\n",
+    "dir = \"/workspace/dtback/img\"\n",
     "!mkdir -p {dir}\n",
     "\n",
     "instruction = \"\"\"\n",
     "Keep face absolutely the same.\n",
-    "Fullbody photo of the girl on top of a building wearing green jacket\n",
+    "Photo of a young woman riding a bike\n",
     "\"\"\".replace(\"'\", \"\")\n",
     "\n",
-    "!python3 infer.py --input_reference_image {dir}/reference.jpg --seed 42 --save_path {dir}/out.jpg --instruction '{instruction}' --output_h 1024 --output_w 1024 \\\n",
-    "    --repainting_scale 1 --task_type portrait --cfg_folder ./config --infer_type diffusers\n",
+    "!python3 infer_lora.py --input_reference_image {dir}/reference.jpg --seed 42 --save_path {dir}/out.jpg --instruction '{instruction}' --output_h 1024 --output_w 1024 \\\n",
+    "    --repainting_scale 0.7 --task_type portrait --cfg_folder ./config --infer_type diffusers --guide_scale 40\n",
     "\n",
     "%cd /workspace/dtback"
    ]
