--- a/main.ipynb
+++ b/main.ipynb
@@ -157,6 +157,40 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "74036d58",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# ComfyUI setup\n",
+    "%cd  /workspace/dtback\n",
+    "!git clone https://github.com/comfyanonymous/ComfyUI.git\n",
+    "%cd /workspace/dtback/ComfyUI\n",
+    "# !pip install -r requirements.txt\n",
+    "%cd /workspace/dtback/ComfyUI/custom_nodes\n",
+    "!git clone https://github.com/ltdrdata/ComfyUI-Manager comfyui-manager\n",
+    "!git clone https://github.com/Suzie1/ComfyUI_Comfyroll_CustomNodes.git\n",
+    "\n",
+    "!huggingface-cli download black-forest-labs/FLUX.1-dev --local-dir /workspace/dtback/ComfyUI/models/unet\n",
+    "# !huggingface-cli download black-forest-labs/FLUX.1-Fill-dev flux1-fill-dev.safetensors --local-dir /workspace/dtback/ComfyUI/models/unet\n",
+    "\n",
+    "!huggingface-cli download black-forest-labs/FLUX.1-dev ae.safetensors --local-dir /workspace/dtback/ComfyUI/models/vae\n",
+    "!huggingface-cli download comfyanonymous/flux_text_encoders clip_l.safetensors --local-dir /workspace/dtback/ComfyUI/models/clip\n",
+    "!huggingface-cli download comfyanonymous/flux_text_encoders t5xxl_fp16.safetensors --local-dir /workspace/dtback/ComfyUI/models/clip\n",
+    "\n",
+    "%cd /workspace/dtback/ComfyUI/models/loras\n",
+    "!huggingface-cli download kudzueye/Boreal boreal-flux-dev-lora-v04_1000_steps.safetensors --local-dir /workspace/dtback/ComfyUI/models/loras\n",
+    "!curl -L -J -O \"https://drive.google.com/uc?export=download&id=1UNuErS3bvfOUwGqGAPU0AA8hXKEOKKyD\"\n",
+    "%cd /workspace/dtback/ComfyUI\n",
+    "\n",
+    "#  npx localtunnel --port 8000 -y\n",
+    "\n",
+    "%cd /workspace/dtback\n",
+    "!python3 ComfyUI/main.py --port 8000"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "b287fc63",
    "metadata": {},
    "outputs": [],
@@ -346,72 +380,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3f7c083e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import json\n",
-    "\n",
-    "j = json.loads(\"\"\"{\n",
-    "  \"MODEL\": {\n",
-    "    \"PORTRAIT\": {\n",
-    "      \"MODEL_PATH\": \"hf://ali-vilab/ACE_Plus@portrait/comfyui_portrait_lora64.safetensors\"\n",
-    "    },\n",
-    "    \"SUBJECT\": {\n",
-    "      \"MODEL_PATH\": \"hf://ali-vilab/ACE_Plus@subject/comfyui_subject_lora16.safetensors\"\n",
-    "    },\n",
-    "    \"LOCAL_EDITING\": {\n",
-    "      \"MODEL_PATH\": \"hf://ali-vilab/ACE_Plus@local_editing/comfyui_local_lora16.safetensors\",\n",
-    "      \"REPAINTING_SCALE\": 0.5,\n",
-    "      \"PREPROCESSOR\": [\n",
-    "        {\n",
-    "          \"NAME\": \"CannyAnnotator\",\n",
-    "          \"TYPE\": \"canny_repainting\",\n",
-    "          \"LOW_THRESHOLD\": 100,\n",
-    "          \"HIGH_THRESHOLD\": 200\n",
-    "        },\n",
-    "        {\n",
-    "          \"NAME\": \"ColorAnnotator\",\n",
-    "          \"TYPE\": \"mosaic_repainting\",\n",
-    "          \"RATIO\": 64\n",
-    "        },\n",
-    "        {\n",
-    "          \"NAME\": \"InfoDrawContourAnnotator\",\n",
-    "          \"TYPE\": \"contour_repainting\",\n",
-    "          \"INPUT_NC\": 3,\n",
-    "          \"OUTPUT_NC\": 1,\n",
-    "          \"N_RESIDUAL_BLOCKS\": 3,\n",
-    "          \"SIGMOID\": true,\n",
-    "          \"PRETRAINED_MODEL\": \"ms://iic/scepter_annotator@annotator/ckpts/informative_drawing_contour_style.pth\"\n",
-    "        },\n",
-    "        {\n",
-    "          \"NAME\": \"MidasDetector\",\n",
-    "          \"PRETRAINED_MODEL\": \"ms://iic/scepter_annotator@annotator/ckpts/dpt_hybrid-midas-501f0c75.pt\",\n",
-    "          \"TYPE\": \"depth_repainting\"\n",
-    "        },\n",
-    "        {\n",
-    "          \"NAME\": \"GrayAnnotator\",\n",
-    "          \"TYPE\": \"recolorizing\"\n",
-    "        }\n",
-    "      ]\n",
-    "    }\n",
-    "  },\n",
-    "  \"ENV\": {\n",
-    "    \"SEED\": 2023,\n",
-    "    \"USE_PL\": false,\n",
-    "    \"BACKEND\": \"nccl\",\n",
-    "    \"SYNC_BN\": false,\n",
-    "    \"CUDNN_DETERMINISTIC\": true,\n",
-    "    \"CUDNN_BENCHMARK\": false\n",
-    "  }\n",
-    "}\"\"\")\n",
-    "\n",
-    "print(\"PORTRAIT\" in j)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "63a9d4b5-62ac-40ba-82e7-1c57aaf789c5",
    "metadata": {
     "scrolled": true
@@ -452,6 +420,7 @@
    "outputs": [],
    "source": [
     "# # # generate the base\n",
+    "!huggingface-cli download black-forest-labs/FLUX.1-dev\n",
     "\n",
     "%cd /workspace/dtback/models/img/loras/\n",
     "!curl -L -J -O \"https://drive.google.com/uc?export=download&id=1UNuErS3bvfOUwGqGAPU0AA8hXKEOKKyD\"\n",
