--- a/trash_bin.ipynb
+++ b/trash_bin.ipynb
@@ -24,30 +24,31 @@
    "outputs": [],
    "source": [
     "# ComfyUI setup\n",
-    "%cd  ~\n",
+    "%cd  /workspace/dtback\n",
     "!git clone https://github.com/comfyanonymous/ComfyUI.git\n",
-    "%cd ~/ComfyUI\n",
-    "!pip install -r requirements.txt\n",
-    "%cd ~/ComfyUI/custom_nodes\n",
-    "!git clone https://github.com/kaibioinfo/ComfyUI_AdvancedRefluxControl.git\n",
+    "%cd /workspace/dtback/ComfyUI\n",
+    "# !pip install -r requirements.txt\n",
+    "%cd /workspace/dtback/ComfyUI/custom_nodes\n",
+    "!git clone https://github.com/ltdrdata/ComfyUI-Manager comfyui-manager\n",
+    "!git clone https://github.com/Suzie1/ComfyUI_Comfyroll_CustomNodes.git\n",
     "\n",
-    "!huggingface-cli download city96/FLUX.1-dev-gguf flux1-dev-Q8_0.gguf --local-dir ~/ComfyUI/models/unet\n",
-    "!huggingface-cli download black-forest-labs/FLUX.1-dev flux1-dev.safetensors --local-dir ~/ComfyUI/models/unet\n",
+    "!huggingface-cli download black-forest-labs/FLUX.1-Fill-dev flux1-fill-dev.safetensors --local-dir /workspace/dtback/ComfyUI/models/unet\n",
     "\n",
-    "!huggingface-cli download black-forest-labs/FLUX.1-dev ae.safetensors --local-dir ~/ComfyUI/models/vae\n",
-    "!huggingface-cli download comfyanonymous/flux_text_encoders clip_l.safetensors --local-dir ~/ComfyUI/models/clip\n",
-    "!huggingface-cli download comfyanonymous/flux_text_encoders t5xxl_fp16.safetensors --local-dir ~/ComfyUI/models/clip\n",
-    "!huggingface-cli download Comfy-Org/sigclip_vision_384 sigclip_vision_patch14_384.safetensors --local-dir ~/ComfyUI/models/clip\n",
-    "!huggingface-cli download second-state/FLUX.1-Redux-dev-GGUF flux1-redux-dev.safetensors --local-dir ~/ComfyUI/models/style_models\n",
+    "!huggingface-cli download black-forest-labs/FLUX.1-dev ae.safetensors --local-dir /workspace/dtback/ComfyUI/models/vae\n",
+    "!huggingface-cli download comfyanonymous/flux_text_encoders clip_l.safetensors --local-dir /workspace/dtback/ComfyUI/models/clip\n",
+    "!huggingface-cli download comfyanonymous/flux_text_encoders t5xxl_fp16.safetensors --local-dir /workspace/dtback/ComfyUI/models/clip\n",
     "\n",
-    "!huggingface-cli download kudzueye/boreal-flux-dev-v2 boreal-v2.safetensors --local-dir ./models/img/loras\n",
-    "!huggingface-cli download kudzueye/Boreal boreal-flux-dev-lora-v04_1000_steps.safetensors --local-dir ./models/img/loras\n",
-    "!mv ./models/img/loras/boreal-flux-dev-lora-v04_1000_steps.safetensors ./models/img/loras/boreal.safetensors\n",
-    "!huggingface-cli download Shakker-Labs/FLUX.1-dev-LoRA-AntiBlur FLUX-dev-lora-AntiBlur.safetensors --local-dir ./models/img/loras\n",
-    "!mv ./models/img/loras/FLUX-dev-lora-AntiBlur.safetensors ./models/img/loras/antiblur.safetensors\n",
-    "!huggingface-cli download Aitrepreneur/FLX t5-v1_1-xxl-encoder-Q8_0.gguf --local-dir ./models/img\n",
+    "!huggingface-cli download kudzueye/Boreal boreal-flux-dev-lora-v04_1000_steps.safetensors --local-dir /workspace/dtback/ComfyUI/models/loras\n",
     "\n",
-    "%cd ~\n",
+    "!curl -sSL https://ngrok-agent.s3.amazonaws.com/ngrok.asc | sudo tee /etc/apt/trusted.gpg.d/ngrok.asc >/dev/null && echo \"deb https://ngrok-agent.s3.amazonaws.com buster main\" \\\n",
+    "\t| sudo tee /etc/apt/sources.list.d/ngrok.list && sudo apt update && sudo apt install ngrok\n",
+    "import base64\n",
+    "t = 'Mk9WSkJ6c2p4QzJzcVZLdEFJNjBWdndhWmhEXzd1UUMzVm8xZ3dMVmllS0JOcHdvNg=='\n",
+    "k = base64.b64decode(t.encode()).decode()\n",
+    "!ngrok config add-authtoken {k}\n",
+    "# ngrok http 8000\n",
+    "\n",
+    "%cd /workspace/dtback\n",
     "!python3 ComfyUI/main.py --port 8000"
    ]
   },
