--- a/main.ipynb
+++ b/main.ipynb
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "74036d58",
    "metadata": {},
    "outputs": [],
@@ -171,7 +171,7 @@
     "!git clone https://github.com/Suzie1/ComfyUI_Comfyroll_CustomNodes.git\n",
     "\n",
     "!huggingface-cli download black-forest-labs/FLUX.1-dev --local-dir /workspace/dtback/ComfyUI/models/unet\n",
-    "# !huggingface-cli download black-forest-labs/FLUX.1-Fill-dev flux1-fill-dev.safetensors --local-dir /workspace/dtback/ComfyUI/models/unet\n",
+    "!huggingface-cli download black-forest-labs/FLUX.1-Fill-dev flux1-fill-dev.safetensors --local-dir /workspace/dtback/ComfyUI/models/unet\n",
     "\n",
     "!huggingface-cli download black-forest-labs/FLUX.1-dev ae.safetensors --local-dir /workspace/dtback/ComfyUI/models/vae\n",
     "!huggingface-cli download comfyanonymous/flux_text_encoders clip_l.safetensors --local-dir /workspace/dtback/ComfyUI/models/clip\n",
