--- a/main.ipynb
+++ b/main.ipynb
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "74036d58",
    "metadata": {},
    "outputs": [],
@@ -179,6 +179,7 @@
     "\n",
     "%cd /workspace/dtback/ComfyUI/models/loras\n",
     "!huggingface-cli download kudzueye/Boreal boreal-flux-dev-lora-v04_1000_steps.safetensors --local-dir /workspace/dtback/ComfyUI/models/loras\n",
+    "!huggingface-cli download Shakker-Labs/FLUX.1-dev-LoRA-AntiBlur FLUX-dev-lora-AntiBlur.safetensors --local-dir /workspace/dtback/ComfyUI/models/loras\n",
     "!curl -L -J -O \"https://drive.google.com/uc?export=download&id=1UNuErS3bvfOUwGqGAPU0AA8hXKEOKKyD\"\n",
     "%cd /workspace/dtback/ComfyUI\n",
     "\n",
