--- a/main.ipynb
+++ b/main.ipynb
@@ -43,34 +43,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d9d58d46",
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
-   "outputs": [],
-   "source": [
-    "!pip uninstall numpy torch flash-attn transformers accelerate optimum auto-gptq huggingface-hub huggingface_hub[hf_transfer] pickleshare safetensors \\\n",
-    "                pymongo json5 diffusers protobuf peft hf_transfer supabase xformers \"xfuser[diffusers,flash-attn]\" -y"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "10c60232-c71f-42a4-b876-bae76231a1b2",
    "metadata": {
     "scrolled": true
    },
    "outputs": [],
    "source": [
-    "%env MAKEFLAGS=\"-j$(nproc)\"\n",
-    "!pip install numpy torch\n",
+    "!export MAKEFLAGS=\"-j$(nproc)\"\n",
+    "!pip install numpy torch hf_transfer huggingface-hub huggingface_hub[hf_transfer]\n",
     "!pip install flash-attn --no-build-isolation\n",
-    "!pip install transformers accelerate optimum auto-gptq huggingface-hub huggingface_hub[hf_transfer] pickleshare safetensors \\\n",
-    "                pymongo json5 diffusers protobuf peft hf_transfer supabase pytorch_lightning --upgrade\n",
-    "\n",
-    "!pip install xformers \"xfuser[diffusers,flash-attn]\""
+    "!pip install transformers accelerate optimum auto-gptq pickleshare safetensors pymongo json5 diffusers protobuf peft hf_transfer supabase \\\n",
+    "    bitsandbytes torchvision pytorch_lightning xformers \"xfuser[diffusers,flash-attn]\" --upgrade"
    ]
   },
   {
@@ -156,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "74036d58",
    "metadata": {},
    "outputs": [],
@@ -165,7 +148,7 @@
     "%cd  /workspace/dtback\n",
     "!git clone https://github.com/comfyanonymous/ComfyUI.git\n",
     "%cd /workspace/dtback/ComfyUI\n",
-    "# !pip install -r requirements.txt\n",
+    "!pip install -r requirements.txt\n",
     "%cd /workspace/dtback/ComfyUI/custom_nodes\n",
     "!git clone https://github.com/ltdrdata/ComfyUI-Manager comfyui-manager\n",
     "!git clone https://github.com/Suzie1/ComfyUI_Comfyroll_CustomNodes.git\n",
@@ -183,7 +166,11 @@
     "!curl -L -J -O \"https://drive.google.com/uc?export=download&id=1UNuErS3bvfOUwGqGAPU0AA8hXKEOKKyD\"\n",
     "%cd /workspace/dtback/ComfyUI\n",
     "\n",
-    "#  npx localtunnel --port 8000 -y\n",
+    "# sudo mkdir -p --mode=0755 /usr/share/keyrings\n",
+    "# curl -fsSL https://pkg.cloudflare.com/cloudflare-main.gpg | sudo tee /usr/share/keyrings/cloudflare-main.gpg >/dev/null\n",
+    "# echo 'deb [signed-by=/usr/share/keyrings/cloudflare-main.gpg] https://pkg.cloudflare.com/cloudflared any main' | sudo tee /etc/apt/sources.list.d/cloudflared.list\n",
+    "# sudo apt-get update && sudo apt-get install cloudflared\n",
+    "# cloudflared tunnel --url http://localhost:8000\n",
     "\n",
     "%cd /workspace/dtback\n",
     "!python3 ComfyUI/main.py --port 8000"
