--- a/main.ipynb
+++ b/main.ipynb
@@ -154,7 +154,7 @@
     "!git clone https://github.com/Suzie1/ComfyUI_Comfyroll_CustomNodes.git\n",
     "!git clone https://github.com/AlekPet/ComfyUI_Custom_Nodes_AlekPet.git # for ACE++ cn workflow\n",
     "\n",
-    "!huggingface-cli download black-forest-labs/FLUX.1-dev --local-dir /workspace/dtback/ComfyUI/models/unet\n",
+    "!huggingface-cli download black-forest-labs/FLUX.1-dev flux1-dev.safetensors --local-dir /workspace/dtback/ComfyUI/models/unet\n",
     "!huggingface-cli download black-forest-labs/FLUX.1-Fill-dev flux1-fill-dev.safetensors --local-dir /workspace/dtback/ComfyUI/models/unet\n",
     "\n",
     "!huggingface-cli download black-forest-labs/FLUX.1-dev ae.safetensors --local-dir /workspace/dtback/ComfyUI/models/vae\n",
@@ -164,6 +164,7 @@
     "%cd /workspace/dtback/ComfyUI/models/loras\n",
     "!huggingface-cli download kudzueye/Boreal boreal-flux-dev-lora-v04_1000_steps.safetensors --local-dir /workspace/dtback/ComfyUI/models/loras\n",
     "!huggingface-cli download Shakker-Labs/FLUX.1-dev-LoRA-AntiBlur FLUX-dev-lora-AntiBlur.safetensors --local-dir /workspace/dtback/ComfyUI/models/loras\n",
+    "!huggingface-cli download Shakker-Labs/AWPortrait-FL AWPortrait-FL-lora.safetensors --local-dir /workspace/dtback/ComfyUI/models/loras\n",
     "!huggingface-cli download ali-vilab/ACE_Plus portrait/comfyui_portrait_lora64.safetensors --local-dir /workspace/dtback/ComfyUI/models/loras # ACE++\n",
     "!curl -L -J -O \"https://drive.google.com/uc?export=download&id=1UNuErS3bvfOUwGqGAPU0AA8hXKEOKKyD\"\n",
     "%cd /workspace/dtback/ComfyUI\n",
