--- a/train.ipynb
+++ b/train.ipynb
@@ -17,18 +17,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import os\n",
+    "HOME = os.getcwd()\n",
+    "print(HOME)\n",
+    "\n",
     "!export MAKEFLAGS=\"-j$(nproc)\"\n",
-    "# !pip install diffusers transformers accelerate xformers huggingface_hub\n",
-    "# !pip install requests pillow insightface opencv-python apex gradio onnx onnxruntime-gpu onnxruntime timm \\\n",
-    "#     SentencePiece git+https://github.com/XPixelGroup/BasicSR ftfy einops facexlib fire\n",
-    "!pip install torch==2.1.0 torchvision==0.16.0 torchaudio==2.1.0 -f https://download.pytorch.org/whl/cu121\n",
-    "!git clone https://github.com/IDEA-Research/GroundingDINO.git\n",
-    "%cd GroundingDINO/\n",
-    "!pip install -e .\n",
-    "!mkdir weights\n",
-    "%cd weights\n",
-    "!wget -q https://github.com/IDEA-Research/GroundingDINO/releases/download/v0.1.0-alpha/groundingdino_swint_ogc.pth\n",
-    "%cd ../.."
+    "!pip install diffusers transformers accelerate xformers huggingface_hub\n",
+    "!pip install requests pillow insightface opencv-python apex gradio onnxruntime-gpu timm \\\n",
+    "    SentencePiece git+https://github.com/XPixelGroup/BasicSR ftfy einops facexlib fire\n",
+    "!pip install groundingdino-py --upgrade"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!pip uninstall onnx onnxruntime onnxruntime-gpu -y\n",
+    "!pip install onnx onnxruntime-gpu"
    ]
   },
   {
@@ -55,9 +62,49 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import requests\n",
+    "\n",
+    "import torch\n",
+    "from PIL import Image\n",
+    "from transformers import AutoProcessor, AutoModelForZeroShotObjectDetection\n",
+    "\n",
+    "model_id = \"IDEA-Research/grounding-dino-tiny\"\n",
+    "device = \"cuda\"\n",
+    "\n",
+    "processor = AutoProcessor.from_pretrained(model_id)\n",
+    "model = AutoModelForZeroShotObjectDetection.from_pretrained(model_id).to(device)\n",
+    "\n",
+    "image_url = \"http://images.cocodataset.org/val2017/000000039769.jpg\"\n",
+    "image = Image.open(requests.get(image_url, stream=True).raw)\n",
+    "search_labels = [[\"a cat\", \"a remote control\"]]\n",
+    "\n",
+    "inputs = processor(images=image, text=search_labels, return_tensors=\"pt\").to(device)\n",
+    "with torch.no_grad():\n",
+    "    outputs = model(**inputs)\n",
+    "\n",
+    "results = processor.post_process_grounded_object_detection(\n",
+    "    outputs,\n",
+    "    inputs.input_ids,\n",
+    "    threshold=0.3,\n",
+    "    text_threshold=0.3,\n",
+    "    target_sizes=[image.size[::-1]]\n",
+    ")\n",
+    "\n",
+    "result = results[0]\n",
+    "for box, score, text_labels in zip(result[\"boxes\"], result[\"scores\"], result[\"text_labels\"]):\n",
+    "    box = [round(x, 2) for x in box.tolist()]\n",
+    "    print(f\"Detected {text_labels} with confidence {round(score.item(), 3)} at location {box}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "!huggingface-cli download black-forest-labs/FLUX.1-dev\n",
     "!huggingface-cli download OpenGVLab/InternViT-300M-448px\n",
-    "!huggingface-cli download IDEA-Research/grounding-dino-base\n",
+    "!huggingface-cli download IDEA-Research/grounding-dino-tiny\n",
     "# !huggingface-cli download OpenGVLab/InternVL2-26B # for dataset creation"
    ]
   },
@@ -68,16 +115,8 @@
    "outputs": [],
    "source": [
     "\"\"\"\n",
-    "Example: Training FLUX.1-dev for text-to-image generation with identity preservation.\n",
+    "Training FLUX.1-dev for text-to-image generation with identity preservation.\n",
     "All base FLUX weights are frozen; only new face/body modules are trainable.\n",
-    "\n",
-    "Requirements:\n",
-    "    pip install diffusers transformers accelerate xformers huggingface_hub\n",
-    "    pip install insightface opencv-python\n",
-    "    pip install timm  # for InternViT\n",
-    "    pip install torch torchvision torchaudio --extra-index-url https://download.pytorch.org/whl/cu118  # if using CUDA\n",
-    "    pip install requests pillow  # for image loading\n",
-    "    pip install \"git+https://github.com/IDEA-Research/GroundingDINO.git\"\n",
     "\"\"\"\n",
     "\n",
     "import os, requests, cv2, torch\n",
@@ -120,12 +159,12 @@
     "# =====================================================================\n",
     "# 2) GROUNDING DINO FOR BODY BOUNDING BOX\n",
     "# =====================================================================\n",
-    "print(\"Loading GroundingDINO (IDEA-Research/grounding-dino-base) ...\")\n",
-    "g_model_id = \"IDEA-Research/grounding-dino-base\"\n",
+    "print(\"Loading GroundingDINO ...\")\n",
+    "g_model_id = \"IDEA-Research/grounding-dino-tiny\"\n",
     "g_processor = AutoProcessor.from_pretrained(g_model_id)\n",
     "g_model = AutoModelForZeroShotObjectDetection.from_pretrained(g_model_id).to(device)\n",
     "\n",
-    "def detect_body_bbox_pil(pil_image, query_text=\"a person.\", box_threshold=0.4, text_threshold=0.3):\n",
+    "def detect_body_bbox_pil(pil_image, query_text=\"a person.\", threshold=0.4, text_threshold=0.3):\n",
     "    \"\"\"\n",
     "    Given a PIL image, uses GroundingDINO to detect bounding boxes\n",
     "    for the given query (default: \"a person.\").\n",
@@ -141,7 +180,7 @@
     "    results = g_processor.post_process_grounded_object_detection(\n",
     "        outputs,\n",
     "        inputs.input_ids,\n",
-    "        box_threshold=box_threshold,\n",
+    "        box_threshold=threshold,\n",
     "        text_threshold=text_threshold,\n",
     "        target_sizes=[pil_image.size[::-1]]  # (height, width)\n",
     "    )\n",
