--- a/train.ipynb
+++ b/train.ipynb
@@ -22,20 +22,9 @@
     "print(HOME)\n",
     "\n",
     "!export MAKEFLAGS=\"-j$(nproc)\"\n",
-    "!pip install diffusers transformers accelerate xformers huggingface_hub\n",
+    "!pip install diffusers transformers accelerate xformers huggingface_hub[hf_transfer] hf_transfer\n",
     "!pip install requests pillow insightface opencv-python apex gradio onnxruntime-gpu timm \\\n",
-    "    SentencePiece git+https://github.com/XPixelGroup/BasicSR ftfy einops facexlib fire\n",
-    "!pip install groundingdino-py --upgrade"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "!pip uninstall onnx onnxruntime onnxruntime-gpu -y\n",
-    "!pip install onnx onnxruntime-gpu"
+    "    SentencePiece git+https://github.com/XPixelGroup/BasicSR ftfy einops facexlib fire onnx onnxruntime-gpu"
    ]
   },
   {
@@ -119,7 +108,7 @@
     "All base FLUX weights are frozen; only new face/body modules are trainable.\n",
     "\"\"\"\n",
     "\n",
-    "import os, requests, cv2, torch\n",
+    "import os, requests, cv2, torch, insightface\n",
     "import torch.nn as nn\n",
     "import torch.nn.functional as F\n",
     "import torch.optim as optim\n",
@@ -130,7 +119,6 @@
     "\n",
     "from diffusers import DiffusionPipeline\n",
     "from transformers import AutoProcessor, AutoModelForZeroShotObjectDetection\n",
-    "import insightface\n",
     "from transformers import AutoModel, AutoFeatureExtractor\n",
     "\n",
     "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
