--- a/main.ipynb
+++ b/main.ipynb
@@ -50,8 +50,7 @@
    "outputs": [],
    "source": [
     "!export MAKEFLAGS=\"-j$(nproc)\"\n",
-    "!pip install numpy torch hf_transfer huggingface-hub huggingface_hub[hf_transfer]\n",
-    "!pip install flash-attn --no-build-isolation\n",
+    "!pip install numpy torch hf_transfer huggingface-hub huggingface_hub[hf_transfer] flash-attn\n",
     "!pip install transformers accelerate optimum auto-gptq pickleshare safetensors pymongo json5 diffusers protobuf peft hf_transfer supabase \\\n",
     "    bitsandbytes torchvision pytorch_lightning xformers \"xfuser[diffusers,flash-attn]\" --upgrade"
    ]
